--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@
 
 # dependencies
 /node_modules
-/frontend/node_modules
+/frontend/.env
+/frontend/node_modules/
 /backend/node_modules
+/backend/.env
 /.pnp
 .pnp.js
 
